chore : ci workflow - `lint` step 내 자동 코드 스타일 수정 명령어 Hint 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,9 @@ jobs:
           bundler-cache: true
 
       - name: Lint code for consistent style
-        run: bin/rubocop -f github
+        run: |
+          # Please resolve lint error by `bin/rubocop -a` and re-commit
+          bin/rubocop -f github
 
   test:
     runs-on: ubuntu-latest
