fix : Fix test ci db environment value
`dotenv` gem이 존재하지만 CI 실행환경에 존재하지 않기 때문에 직접 환경변수 값을 지정하도록 했습니다.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,6 +68,9 @@ jobs:
       - name: Run tests
         env:
           RAILS_ENV: test
-          DATABASE_URL: postgres://postgres:postgres@localhost:5432
-          # REDIS_URL: redis://localhost:6379/0
+          DB_NAME: schedule_reservation_system_test
+          DB_HOST: localhost
+          DB_USERNAME: postgres
+          DB_PASSWORD: postgres
+          DB_PORT: 5432
         run: bin/rails db:test:prepare test
