fix : Fix test CI workflow
`db:*` 패턴 명령을 직접 실행하지 않고 test 실행 시, 의도한 initialize가 될 수 있도록 설정했습니다.
- 정해져있는 `db:*` 명령에 의해 해당 명령을 위해 필요로 하지만 실제로 필요하지 않은 리소스 파일들에 대한 생성을 방지하기 위함입니다.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,4 +73,4 @@ jobs:
           DB_USERNAME: postgres
           DB_PASSWORD: postgres
           DB_PORT: 5432
-        run: bin/rails db:test:prepare test
+        run: bin/rails test
